services/demo-v61/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-v61
  labels:
    name: demo-v61
    app: demo-v61-api
