services/demo-v61/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-v61-service
  namespace: demo-v61
  labels:
    app: demo-v61
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 7005
    protocol: TCP
    name: http
  selector:
    app: demo-v61
